--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,10 @@
-@use './sass/variables' as *;
+@use './sass/variables'as *;
 
-// *{
-//   font-family: $primary-font;
-// }
+* {
+  font-family: $primary-font;
+}
+
+body{
+  background-color: black;
+  color: white;
+}
