--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,9 @@ body {
 a:not([class]) {
   text-decoration-skip-ink: auto;
 }
+a{
+  text-decoration: none;
+}
 
 /* Make images easier to work with */
 img,
