--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap');
 
 
-$primary-font: "Courgette", cursive;
+$primary-font: "Josefin Slab", serif;
