--- a/src/Components/Brew/Brew.scss
+++ b/src/Components/Brew/Brew.scss
@@ -5,13 +5,13 @@
   align-items: center;
   justify-content:center;
   padding: 1.5rem;
-  // max-width: 15em;
+  word-wrap:break-word;
 }
 
 .brew-info {
 
   &__name{
-    font-size: 2.155rem;
+    font-size: 1.5rem;
   }
 
 }
