--- a/src/Components/Shop/Shop.scss
+++ b/src/Components/Shop/Shop.scss
@@ -8,7 +8,8 @@
   display: grid;
   margin: 0 auto;
   grid-gap: 2rem;
-  grid-template-columns: repeat(3, minmax(200px, 1fr));
+  grid-template-columns: repeat(3, minmax(15em, 20em));
+  grid-template-rows: repeat(auto-fit, minmax(10em, auto));
 
 }
 
