--- a/src/Components/Shop/Shop.scss
+++ b/src/Components/Shop/Shop.scss
@@ -11,14 +11,12 @@
   display: grid;
   margin: 0 auto;
   grid-gap: 2rem;
-  grid-template-columns: repeat(3, minmax(max-content, 25em));
-  // grid-template-rows: max-content;
+  grid-template-columns: repeat(3, minmax(15em, 25em));
   grid-auto-rows:minmax(max-content, 25em);
-  // grid-template-rows: (minmax(max-content, 25em));
 }
 
 @media screen and (max-width: 900px) {
   .brew-cards {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
   }
 }
