--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap'); 
+// @import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
 //* For homepage maybe? Groovy little font and I like that long text shadow effect
+// font-family: 'Lobster', cursive;
 
 
 $primary-font: "Josefin Slab", serif;
