--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -1,3 +1,5 @@
+@use '../../sass/variables'as *;
+
 .cart {
   outline: 2px solid red;
   display: flex;
@@ -13,7 +15,7 @@
   height: 65%;
   border-radius: 10px;
   outline: 2px solid white;
-  background-color: white;
+  background-color: $secondary-color;
   box-shadow: 5px 5px 20px rgb(74, 112, 128);
   color: black;
   display:flex;
@@ -56,7 +58,6 @@
   width: 25%;
   max-width: 30%;
   padding: 0 .5rem;
-  outline: 2px solid dodgerblue;
 
   &--item-name {
     text-decoration: underline;
@@ -68,7 +69,6 @@
   justify-content: space-around;
   align-content: center;
   min-width: 15%;
-  outline: 2px solid red;
 
   &--increase-btn {
     width: 2rem;
