--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,3 +1,5 @@
+@use '../../sass/variables'as *;
+
 .header {
   // outline: 3px solid red;
   font-size: 1.1rem;
@@ -26,7 +28,7 @@
 
 .header-link {
   text-decoration: none;
-  color: white;
+  color: black;
 
   &--profile {
     // align-self: flex-end;
