--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -7,5 +7,7 @@
 
 
 $primary-font: "Hepta Slab", serif;
-$primary-color: #EAC8AF;
-$secondary-color:#FFC8C8;
+$primary-color: #f7ede2;
+$secondary-color:#84a59d;
+$accent-color-one:#ffa822;
+$accent-color-two: #ff6150;
