--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,11 @@
 @use './sass/variables'as *;
 
-* {
+html{
+  background: url('./assets/background_waves.png') no-repeat center center fixed; 
 }
 
-body{
+body {
+  height:100%;
   font-family: $primary-font;
-  background-color: $primary-color;
   color: black;
 }
