--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,15 @@
 @use './sass/variables'as *;
 
 html{
-  background: url('./assets/background_waves.png') no-repeat center center fixed; 
+  background: url('./assets/bg_waves2.svg') no-repeat center center fixed; 
 }
 
 body {
-  height:100%;
+  // height:100%;
   font-family: $primary-font;
   color: black;
+}
+
+.App{
+  height: 100%;
 }
