--- a/src/Components/Brew/Brew.scss
+++ b/src/Components/Brew/Brew.scss
@@ -3,7 +3,7 @@
 
 .brew-card {
   outline: 2px solid white;
-  background-color: $secondary-color;
+  background-color: #b36d53;
   border-radius: 10px;
 
   // word-wrap: break-word;
@@ -35,6 +35,7 @@
   display: flex;
   flex-flow: column wrap;
   justify-content: space-around;
+  color: $primary-color;
 
   &--name {
     font-size: 1.5rem;
