--- a/src/index.scss
+++ b/src/index.scss
@@ -1,77 +1,52 @@
-/* Box sizing rules */
-*,
-*::before,
-*::after {
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
   box-sizing: border-box;
 }
-
-/* Remove default margin */
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
+/*
+  2. Remove default margin
+*/
+* {
   margin: 0;
 }
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
-  list-style: none;
+/*
+  3. Allow percentage-based heights in the application
+*/
+html, body, #root {
+  height: 100%;
 }
-
-/* Set core root defaults */
-html:focus-within {
-  scroll-behavior: smooth;
-}
-
-/* Set core body defaults */
+/*
+  Typographic tweaks!
+  4. Add accessible line-height
+  5. Improve text rendering
+*/
 body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
   line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
 }
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-}
-a{
-  text-decoration: none;
-}
-
-/* Make images easier to work with */
-img,
-picture {
-  max-width: 100%;
+/*
+  6. Improve media defaults
+*/
+img, picture, video, canvas, svg {
   display: block;
+  max-width: 100%;
 }
-
-/* Inherit fonts for inputs and buttons */
-input,
-button,
-textarea,
-select {
+/*
+  7. Remove built-in form typography styles
+*/
+input, button, textarea, select {
   font: inherit;
 }
-
-/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-    scroll-behavior: auto;
-  }
-
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
+/*
+  8. Avoid text overflows
+*/
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+/*
+  9. Create a root stacking context
+*/
+#root, #__next {
+  isolation: isolate;
 }
