--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -10,5 +10,6 @@
 $primary-font: "Oleo Script", cursive;
 $primary-color: #f7ede2;
 $secondary-color:#84a59d;
-$accent-color-one:#ffa822;
-$accent-color-two: #ff6150;
+$accent-color-one:#f5cac3;
+$accent-color-two: #f28482;
+$accent-color-three:#f6bd60;
