--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -1,4 +1,4 @@
-@use '../../sass/variables.scss' as *;
+@use '../../sass/variables.scss'as *;
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 
@@ -6,32 +6,66 @@
 .homepage {
   // display: flex;
   // flex-flow: column wrap;
-  height: 100%;
+  // height: 100%;
   border: 2px solid magenta;
 }
 
 .intro {
   letter-spacing: 2px;
   text-align: center;
+  padding: 1rem;
+  height: 50%;
+
+  &--heading {
+    color: $primary-color;
+    text-shadow: 1px 0px 0px black,
+    -1px 0px 0px black,
+    0px 1px 0px black,
+    0px -2px 0px black,
+    0px 2px 0px black,
+    2px 0px 0px black,
+    -2px 0px 0px black;
+    font-size: 4vw;
+  }
+
+  &--subheading {
+    font-size: 4vw;
+
+  }
 
   &--site-name {
-    font-family: $primary-font;
-    font-size: 4.5rem;
+    font-size: 8.5vw;
     font-style: italic;
-    text-shadow: -1px 1px 1px #637e7e,
-      -2px 2px 1px #637e7e,
-      -3px 3px 1px #637e7e,
-      -4px 4px 1px #637e7e,
-      -5px 5px 1px #637e7e,
-      -6px 6px 1px #637e7e,
-      -7px 8px 1px #637e7e;
+    color: $primary-color;
+    text-shadow: 1px 0px 0px black,
+      -1px 0px 0px black,
+      0px 1px 0px black,
+      0px -2px 0px black,
+      0px 2px 0px black,
+      2px 0px 0px black,
+      -2px 0px 0px black,
+      -5px 4px 0px $secondary-color,
+      -7px 6px 0px $accent-color-one,
+      -9px 8px 0px $accent-color-two,
+      0px 0px 4px black,
+      0px 0px 4px black,
   }
+
 }
 
-.get-started{
-  outline:1px solid white;
+
+.browse-wrapper {
+  outline: 4px solid dodgerblue;
+  font-size: 2.5vw;
   display:flex;
-  flex-flow:column wrap;
-  justify-content:center;
-  align-items:center;
+  flex-flow: row wrap;
+  justify-content:space-evenly;
+
+  &--coffee-text{
+
+  }
+
+  &--tea-txt{
+
+  }
 }
