--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -7,7 +7,6 @@
   // display: flex;
   // flex-flow: column wrap;
   // height: 100%;
-  border: 2px solid magenta;
 }
 
 .intro {
@@ -45,7 +44,7 @@
       2px 0px 0px black,
       -2px 0px 0px black,
       -5px 4px 0px $secondary-color,
-      -7px 6px 0px $accent-color-one,
+      -7px 6px 0px $accent-color-three,
       -9px 8px 0px $accent-color-two,
       0px 0px 4px black,
       0px 0px 4px black,
@@ -55,17 +54,25 @@
 
 
 .browse-wrapper {
-  outline: 4px solid dodgerblue;
   font-size: 2.5vw;
   display:flex;
   flex-flow: row wrap;
   justify-content:space-evenly;
 
-  &--coffee-text{
+  &--coffee-btn{
+    color: black;
+    background-color: $accent-color-two;
+    box-shadow: 8px 6px 0px 3px $primary-color;
+    border:2px solid black;
+    border-radius: 10px;
 
   }
 
-  &--tea-txt{
-
+  &--tea-btn{
+    color: black;
+    background-color: $accent-color-three;
+    box-shadow: 8px 6px 0px 3px $primary-color;
+    border:2px solid black;
+    border-radius: 10px;
   }
 }
