--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -4,27 +4,24 @@
 
 
 .homepage {
-  // display: flex;
-  // flex-flow: column wrap;
-  // height: 100%;
+  height: 100%;
+  border: 3px solid magenta;
 }
 
 .intro {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items:center;
   letter-spacing: 2px;
   text-align: center;
   padding: 1rem;
-  height: 50%;
+  height:40%;
 
   &--heading {
     color: $primary-color;
-    text-shadow: 1px 0px 0px black,
-      -1px 0px 0px black,
-      0px 1px 0px black,
-      0px -2px 0px black,
-      0px 2px 0px black,
-      2px 0px 0px black,
-      -2px 0px 0px black;
-    font-size: 4vw;
+    text-shadow: 1px 1px 4px black;
+    font-size: 5.75vw;
   }
 
   &--subheading {
@@ -53,6 +50,7 @@
 
 
 .browse-wrapper {
+  border:102px dodgerblue;
   font-size: 2.5vw;
   display: flex;
   flex-flow: row wrap;
