--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,12 @@
 @use './sass/variables'as *;
 
 html {
+  background-image: url('./assets/bg_waves3.svg');
   background-image: url('./assets/bg_waves2.svg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: fixed;
   // background: url('./assets/bg_waves2.svg') no-repeat center center fixed; 
 }
 
