--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -73,10 +73,10 @@
   }
 
   &--coffee-btn {
-    background-color: $accent-color-two;
+    background-color: #a47c6c;
   }
 
   &--tea-btn {
-    background-color: $accent-color-three;
+    background-color: #7ea46c;
   }
 }
