--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -112,20 +112,29 @@
 }
 
 .place-order {
-  border: 2px solid dodgerblue;
   display: flex;
+  min-height: 20%;
   width: 100%;
   flex-flow: column nowrap;
   justify-content: space-between;
-  text-align:center;
+  text-align: center;
   align-items: center;
+
+  &--final-total {
+    font-size: 1.7rem;
+    text-decoration: underline;
+  }
 
   &--btn {
     background-color: $accent-color-three;
     border: 2px solid black;
     border-radius: 5px;
     cursor: pointer;
-
+    padding: .5rem 1.5rem;
+    &:active{
+      transform: translateY(2px);
+      box-shadow: 5px 3px 0px 3px black;
+    }
   }
 }
 
