--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -131,10 +131,17 @@
     border-radius: 5px;
     cursor: pointer;
     padding: .5rem 1.5rem;
-    &:active{
+
+    &:disabled {
+      cursor: not-allowed;
+      background-color: #bbb;
+    }
+
+    &:active:enabled {
       transform: translateY(2px);
       box-shadow: 5px 3px 0px 3px black;
     }
+
   }
 }
 
