--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -1,18 +1,45 @@
-.order-card {
-  border: 2px solid red;
-  width: 50%;
+.orders {
+  outline: 2px solid red;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  max-height: 95%;
 }
+
+.order-content-container {
+  max-height: 70vh;
+  overflow-y: scroll;
+  border: 2px solid red;
+
+}
+
+
+.order-content {
+  background-color: white;
+  margin: 1rem 0;
+}
+
+.order-card {
+  min-width: 75%;
+  height: 85%;
+  border-radius: 10px;
+  outline: 2px solid white;
+  box-shadow: 5px 5px 20px rgb(0, 0, 0);
+  color: black;
+  font-size: 1.25rem;
+  padding: 1rem;
+}
+
 
 .order-items {
   display: flex;
   flex-flow: column wrap;
-  &--summary-text {
-    
-  }
+  outline: 2px solid mediumspringgreen;
 
-  &--items-list {
+  &--summary-text {}
 
-  }
+  &--items-list {}
 
   &--order-date {}
 
