--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -10,27 +10,38 @@
 }
 
 .order-card {
+  background-color: $accent-color-three;
   min-width: 75%;
   max-height: 85%;
   border-radius: 10px;
   outline: 2px solid white;
   box-shadow: 5px 5px 20px rgb(0, 0, 0);
   color: black;
-  background-color: $accent-color-three;
   font-size: 1.25rem;
   padding: 1rem;
+  display: flex;
+  flex-flow:column nowrap;
+  align-items:center;
+  justify-content:center;
 
   &--inner {
+    padding: 1rem;
     background-color: white;
     overflow-y: scroll;
+    width: 90%;
     height: 85%;
+    border: 2px solid red;
+    display: flex;
+    flex-flow:column nowrap;
+    align-items:center;
+    
   }
 }
 
 
 .order-items {
-  // display: flex;
-  // flex-flow: column wrap;
+  display: flex;
+  flex-flow: column wrap;
   width: 75%;
   outline: 2px solid mediumspringgreen;
 
