Add icon to order items and arrange sise by side

--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -50,6 +50,7 @@
   align-items: center;
   justify-content: space-between;
   padding: .5rem 1rem;
+  outline:2px solid magenta;
 
   &--item-icon {
     max-width: 3.5rem;
