Position order total and date underneath order num

--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -48,13 +48,13 @@
     // align-items: flex-end;
   }
 
-  &--date-and-num {
+  &--date-and-total {
     color: #5b5b5b;
     float: left;
     font-size: .85rem;
   }
 
-  &--total {
+  &--order-num {
     text-decoration: underline;
     text-align: left;
   }
