--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -40,7 +40,7 @@
   width: 65%;
   border-radius: 10px;
   padding: 2.5rem 1rem;
-  outline: 2px solid rgb(255, 0, 0);
+  outline: 2px solid black;
 
   &--header {
     // display: flex;
@@ -51,10 +51,11 @@
   &--date-and-total {
     color: #5b5b5b;
     float: left;
-    font-size: .85rem;
+    font-size: .95rem;
   }
 
   &--order-num {
+    font-size:1.25rem;
     text-decoration: underline;
     text-align: left;
   }
@@ -76,7 +77,7 @@
   // justify-content: center;
   // align-items: center;
   margin: .75rem;
-  padding: 0 1rem 1rem 1rem;
+  padding: 1rem;
 }
 
 
