Match size of order card to cart card

--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -22,9 +22,9 @@
   padding: 1rem;
 
 
-  &__cart-header {
+  &--cart-header {
     text-align: center;
-    font-size: 1.55rem;
+    font-size: 2rem;
   }
 }
 
