--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -3,16 +3,16 @@
 .orders {
   outline: 2px solid red;
   display: flex;
-  min-height: 100%;
+  height: 95vh;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
 }
 
 .order-card-container {
-  background-color: $accent-color-three;
+  background-color: $primary-color;
   min-width: 75%;
-  height: 80vh;
+  max-height: 85%;
   border-radius: 10px;
   outline: 2px solid white;
   box-shadow: 5px 5px 20px rgb(0, 0, 0);
@@ -34,10 +34,10 @@
 .order-card {
   display: flex;
   flex-flow: column nowrap;
-  background-color: $accent-color-one;
+  background-color: $primary-color;
   justify-content: space-around;
   margin: .5rem 0;
-  width: 65%;
+  min-width: 65%;
   border-radius: 10px;
   padding: 2.5rem 1rem;
   outline: 2px solid black;
