--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,42 +1,17 @@
 @use '../../sass/variables'as *;
 
 .header {
-  // outline: 3px solid red;
+  outline: 3px solid red;
   font-size: 1.1rem;
-  height: 5vh;
   display: flex;
+  padding: 1rem;
   align-items: center;
   justify-content: space-between;
 }
 
-.header__left {
-  float: left;
+.site-logo {
+  max-width:5.5em;
+  margin: 0 1rem;
+  filter:drop-shadow(-1px 1px 0px black)
 }
 
-.header__right {
-  // outline: 3px solid magenta;
-  float: right;
-}
-
-.header__center {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
-  padding: 0 1rem;
-  width: 50%;
-}
-
-.header-link {
-  text-decoration: none;
-  color: black;
-
-  &--profile {
-    // align-self: flex-end;
-  }
-
-  &--tea,
-  &--coffee,
-  &--shop {
-    text-align: center;
-  }
-}
