--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -19,7 +19,8 @@
 
   &--heading {
     color: $primary-color;
-    text-shadow: 1px 1px 4px black;
+    text-shadow: 1px 1px 2px black;
+    filter:drop-shadow(-2px 2px 0px rgba(0, 0, 0, 0.583));
     font-size: 5.75vw;
   }
 
