--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -4,45 +4,31 @@
   // outline: 3px solid red;
   display: flex;
   padding: 1rem 1rem 0 .5rem;
-  // flex-flow: row wrap;
+  flex-flow: row wrap;
   justify-content: space-between;
   align-items: flex-end;
 }
 
-.header-link:visited > {
-  img {
-  border: 4px solid dodgerblue;
-  background-color: whitesmoke;
-  transform:scaleY(1.1);
-}
-}
-
-
-.header-left {
-  // display: flex;
-  float: left;
-
-}
 
 .header-right {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  align-content: baseline;
+  align-items: baseline;
 }
 
 .site-logo {
-  max-width: 5em;
+  max-width: 12vh;
   filter: drop-shadow(-1px 1px 1px black);
 }
 
 .orders-img,
 .cart-img {
-  height: 1.5em;
+  height: 3.5vh;
   // box-shadow: 10px 10px 10px black;
   filter: drop-shadow(-1px 1px 2px black);
 }
 
 .cart-img {
-  margin: 0 1rem;
+  margin: 0 2rem;
 }
