--- a/src/Components/Brew/Brew.scss
+++ b/src/Components/Brew/Brew.scss
@@ -4,6 +4,7 @@
 .brew-card {
   outline: 2px solid white;
   border-radius: 10px;
+  padding: .5rem 0;
 
   &--coffee {
     background-color: #a47c6c;
@@ -20,7 +21,20 @@
     background-color: $primary-color;
     border: 2px solid black;
     border-radius: 5px;
+    cursor: pointer;
+    transition: background 100ms ease;
 
+    &:hover {
+      background-color: black;
+      border: 2px solid $primary-color;
+      color: $primary-color;
+    }
+
+    &:active {
+      transform: translateY(1px);
+      box-shadow: 2px 2px 0px 1px black;
+
+    }
   }
 }
 
