--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -19,12 +19,15 @@
 
   &--heading {
     color: $primary-color;
-    text-shadow: 1px 1px 2px black;
-    filter: drop-shadow(-2px 2px 0px rgba(0, 0, 0, 0.583));
+    text-shadow: .25vw .25vw 0vw black;
+    // filter: drop-shadow(-2px 2px 0px rgba(0, 0, 0, 0.583));
     font-size: 5.75vw;
   }
 
   &--subheading {
+    color: $primary-color;
+    text-shadow: .15vw .15vw 0vw black;
+    // filter: drop-shadow(-.25vw .25vw 0px rgba(0, 0, 0, 0.583));
     font-size: 4vw;
 
   }
