--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -3,17 +3,16 @@
 .header {
   // outline: 3px solid red;
   display: flex;
-  padding: 1rem 1rem 0 .5rem;
+  padding: .5rem;
+  margin: 0 .75rem;
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: flex-end;
+  background-color:rgba(117, 165, 160, 0);
+  border: 3px solid #000000;
+  border-radius:5px;
+  box-shadow: 0px 3px 8px #434141;
 }
-
-// .header-link:active {
-//   button {
-//     background: blue;
-//   }
-// }
 
 .header-right {
   display: flex;
